# ofxRosTemplate

./: .gitignore  Makefile  README.md
docker/: Dockerfile  build.sh  global_ros_setting.sh  install_codecs.sh  install_dependencies.sh  run.sh
ofxRosTemplete/: CMakeLists.txt  package.xml
ofxRosTemplete/of/: config.make  make.sh
ofxRosTemplete/of/src/: ofApp.cpp
ofxRosTemplete/of_wo_ros/: Makefile  config.make
ofxRosTemplete/of_wo_ros/src/: main.cpp  ofApp.cpp  ofApp.h
src/: main.cpp  ofApp.h
